--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-
-
 .wrapper {
   margin-top: 50px;
 }
@@ -8,7 +6,6 @@
   text-align: center;
   font-size: 50px;
 }
-
 
 .form-js {
   margin-bottom: 50px;
@@ -31,5 +28,5 @@ output {
   margin-top: 20px;
   padding-top: 50px;
   height: 150px;
-  background-color: beige;
+  background-color: rgb(92, 92, 10);
 }
